--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
         "@vitejs/plugin-vue": "^5.0.0",
         "apexcharts": "^5.3.6",
         "axios": "^1.7.0",
+        "bootstrap": "^5.3.3",
+        "bootstrap-icons": "^1.13.1",
         "primeicons": "^7.0.0",
         "primevue": "^4.5.2",
         "sweetalert2": "^11.26.4",
