--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -29,7 +29,7 @@ services:
     container_name: ${DOCKER_PREFIX:-lms}-nginx-prod
     restart: unless-stopped
     ports:
-      - "${APP_PORT:-80}:80"
+      - "${APP_PORT}:80"
     volumes:
       # Mount the production config
       - ./docker/nginx/prod.conf:/etc/nginx/conf.d/default.conf
