--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^11.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "phpoffice/phpspreadsheet": "^2.0",
         "spatie/laravel-permission": "^6.23",
         "tightenco/ziggy": "^2.6"
     },
